[metadata]
name = dapqa-fast-mf
version = 0.0.1
author = Alexander Nechaev
author_email = dapqa@yandex.ru
description = Fast implementation of SVD and SVD++ matrix factorization algorithms for RecSys
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dapqa/dapqa-fast-mf

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    numpy==1.20.3
    scikit-learn==1.0
    numba==0.53.1
    icc_rt==2019.0

[options.packages.find]
where = .

[tool:pytest]
testpaths = tests